--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="calculator">
-    <div id="display" class="display">12345</div>
+    <div id="display" class="display">0</div>
     <div class="button-container">
       <div class="row">
         <button id="mc" type="button" class="button m-button" disabled>MC</button>
@@ -20,29 +20,29 @@
         <button id="del" type="button" class="button delete-button" disabled>Del</button>
         <button id="square-root" type="button" class="button" disabled>√</button>
         <button type="button" class="button" disabled>%</button>
-        <button type="button" class="button operator">÷</button>
+        <button type="button" class="button operator" value="÷">÷</button>
       </div>
       <div class="row">
-        <button type="button" class="button number">7</button>
-        <button type="button" class="button number">8</button>
-        <button type="button" class="button number">9</button>
-        <button type="button" class="button operator">x</button>
+        <button type="button" class="button number" value="7">7</button>
+        <button type="button" class="button number" value="8">8</button>
+        <button type="button" class="button number" value="9">9</button>
+        <button type="button" class="button operator" value="x">x</button>
       </div>
       <div class="row">
-        <button type="button" class="button number">4</button>
-        <button type="button" class="button number">5</button>
-        <button type="button" class="button number">6</button>
-        <button type="button" class="button operator">-</button>
+        <button type="button" class="button number" value="4">4</button>
+        <button type="button" class="button number" value="5">5</button>
+        <button type="button" class="button number" value="6">6</button>
+        <button type="button" class="button operator" value="-">-</button>
       </div>
       <div class="row">
-        <button type="button" class="button number">1</button>
-        <button type="button" class="button number">2</button>
-        <button type="button" class="button number">3</button>
-        <button type="button" class="button operator">+</button>
+        <button type="button" class="button number" value="1">1</button>
+        <button type="button" class="button number" value="2">2</button>
+        <button type="button" class="button number" value="3">3</button>
+        <button type="button" class="button operator" value="+">+</button>
       </div>
       <div class="row">
         <button id="clear" type="button" class="button clear">C</button>
-        <button type="button" class="button number">0</button>
+        <button type="button" class="button number" value="0">0</button>
         <button id="decimal" type="button" class="button decimal" disabled>.</button>
         <button id="equal" type="button" class="button equal">=</button>
       </div>
