--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <button id="m-plus" type="button" class="button m-button" disabled>M+</button>
       </div>
       <div class="row">
-        <button id="del" type="button" class="button delete-button" disabled>Del</button>
-        <button id="square-root" type="button" class="button" disabled>√</button>
+        <button id="del" type="button" class="button delete-button">Del</button>
+        <button id="square-root" type="button" class="button special">√</button>
         <button type="button" class="button" disabled>%</button>
         <button type="button" class="button operator" value="÷">÷</button>
       </div>
