added percent and decimal buttons

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="row">
         <button id="del" type="button" class="button delete-button">Del</button>
         <button id="square-root" type="button" class="button special">√</button>
-        <button type="button" class="button" disabled>%</button>
+        <button id="percent" type="button" class="button special">%</button>
         <button type="button" class="button operator" value="÷">÷</button>
       </div>
       <div class="row">
@@ -43,7 +43,7 @@
       <div class="row">
         <button id="clear" type="button" class="button clear">C</button>
         <button type="button" class="button number" value="0">0</button>
-        <button id="decimal" type="button" class="button decimal" disabled>.</button>
+        <button id="decimal" type="button" class="button">.</button>
         <button id="equal" type="button" class="button equal">=</button>
       </div>
     </div>
